--- a/src/package.xml
+++ b/src/package.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-	<types>
-		<members>*</members>
-		<name>ApexClass</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>ApexTrigger</name>
-	</types>
-	<types>
-		<members>TaskList</members>
-		<members>TaskDetail</members>
-		<members>TaskTest</members>
-		<name>AuraDefinitionBundle</name>
-	</types>
-	<version>36.0</version>
+    <types>
+        <members>*</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ApexComponent</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>AuraDefinitionBundle</name>
+    </types>
+    <types>
+        <members>Contact</members>
+        <members>HTask__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>HTask__c-Daily</members>
+        <members>HTask__c-Habit</members>
+        <members>HTask__c-TO-DO</members>
+        <name>Layout</name>
+    </types>
+    <version>36.0</version>
 </Package>
